[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Scenes/Game/Entities/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scenes/Game/Entities/Enemy/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Scenes/Game/Game.gd" type="Script" id=3]
[ext_resource path="res://Assets/Scenes/Game/Items/Crystal/LightCrystal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Scenes/Game/Tiles/Grass1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Scenes/Game/Tiles/OuterWall1.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Scenes/Game/Tiles/Obstacle1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Scenes/Game/GUI/GameGUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Scenes/Game/Tiles/Obstacle2.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Scenes/Game/Tiles/OuterWall2.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Scenes/Game/Tiles/Grass3.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Scenes/Game/Tiles/Grass2.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Scenes/Game/Tiles/Dirt1.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/Audio/Music/Open Exploring.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/Audio/Music/death.wav" type="AudioStream" id=17]
[ext_resource path="res://Assets/Audio/Effects/crystal_collected.wav" type="AudioStream" id=19]

[node name="Game" type="Node"]
script = ExtResource( 3 )
player_object = ExtResource( 1 )
enemy_object = ExtResource( 2 )
crystal_object = ExtResource( 4 )
outer_wall_tiles = [ ExtResource( 6 ), ExtResource( 10 ) ]
ground_tiles = [ ExtResource( 5 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 15 ) ]
obstacle_tiles = [ ExtResource( 7 ), ExtResource( 9 ) ]
sound_effects = [ ExtResource( 19 ) ]
music = [ ExtResource( 16 ), ExtResource( 17 ) ]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameGUI" parent="CanvasLayer" instance=ExtResource( 8 )]
margin_top = 0.0
margin_bottom = 0.0

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
autoplay = true

[node name="EffectPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="collected_crystal" from="Player" to="." method="_on_Player_collected_crystal"]
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="exp_changed" from="Player" to="CanvasLayer/GameGUI" method="_on_Player_exp_changed"]
[connection signal="health_changed" from="Player" to="CanvasLayer/GameGUI" method="_on_Player_health_changed"]
[connection signal="weapon_changed" from="Player" to="CanvasLayer/GameGUI" method="_on_Player_weapon_changed"]
